[gd_scene load_steps=2 format=2]

[ext_resource path="res://Escenas/Player/DominicAtacks/Espina_attack.gd" type="Script" id=1]

[node name="Espina_attack" type="Node2D"]
position = Vector2( 504, 0 )
script = ExtResource( 1 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -160, 336 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -128, 336 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( -96, 336 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( -64, 336 )

[node name="Position2D6" type="Position2D" parent="."]
position = Vector2( -32, 336 )

[node name="Position2D7" type="Position2D" parent="."]
position = Vector2( 0, 336 )

[node name="Position2D8" type="Position2D" parent="."]
position = Vector2( 32, 336 )

[node name="Position2D9" type="Position2D" parent="."]
position = Vector2( 64, 336 )

[node name="Position2D10" type="Position2D" parent="."]
position = Vector2( 96, 336 )

[node name="Position2D11" type="Position2D" parent="."]
position = Vector2( 128, 336 )

[node name="Position2D12" type="Position2D" parent="."]
position = Vector2( 160, 336 )

[node name="Position2D13" type="Position2D" parent="."]
position = Vector2( 192, 336 )

[node name="Position2D14" type="Position2D" parent="."]
position = Vector2( 224, 336 )

[node name="Position2D15" type="Position2D" parent="."]
position = Vector2( 256, 336 )

[node name="Position2D16" type="Position2D" parent="."]
position = Vector2( 288, 336 )

[node name="Position2D17" type="Position2D" parent="."]
position = Vector2( 320, 336 )

[node name="Position2D18" type="Position2D" parent="."]
position = Vector2( 352, 336 )

[node name="Position2D19" type="Position2D" parent="."]
position = Vector2( 384, 336 )

[node name="Position2D20" type="Position2D" parent="."]
position = Vector2( 416, 336 )

[node name="Position2D21" type="Position2D" parent="."]
position = Vector2( 448, 336 )

[node name="Position2D22" type="Position2D" parent="."]
position = Vector2( 480, 336 )

[node name="Position2D23" type="Position2D" parent="."]
position = Vector2( 512, 336 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.003
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
